# IsoCity

./: CMakeCache.txt  CMakeLists.txt  IsoCity  LICENSE.md  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: main.cpp.1D676350C69B0631.idx
.github/workflows/: build.yml
include/: helper.hpp  readme
src/: defs.h  defs.hpp  iso.cpp  main.cpp  structs.hpp
